oblig2patch/src/tests/oblig2/errors/general2_fail.cmp
program general2_fail
begin
  proc Proc( a : int )
  begin
    var a : int  /* error, param already named a */ 
    in
    printint( a )
  end;
  proc main()
  begin 
    in
    Proc()
  end
end